Main game functions (✔️)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- 空白格子颜色 -->
+    <color name="cell_empty">#CCC0B3</color>
+
+    <!-- 数字格子颜色 -->
+    <color name="cell_2">#EEE4DA</color>
+    <color name="cell_4">#EDE0C8</color>
+    <color name="cell_8">#F2B179</color>
+    <color name="cell_16">#F59563</color>
+    <color name="cell_32">#F67C5F</color>
+    <color name="cell_64">#F65E3B</color>
+    <color name="cell_128">#EDCF72</color>
+    <color name="cell_256">#EDCC61</color>
+    <color name="cell_512">#EDC850</color>
+    <color name="cell_1024">#EDC53F</color>
+    <color name="cell_2048">#EDC22E</color>
+
+    <!-- 超过2048的格子颜色 -->
+    <color name="cell_over_2048">#3C3A32</color>
+
+    <!-- 文字颜色 -->
+    <color name="text_light">#776E65</color> <!-- for light-colored cells -->
+    <color name="text_dark">#F9F6F2</color> <!-- for dark-colored cells -->
 </resources>
