--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -256,14 +256,12 @@
         android:id="@+id/switchControlMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:layout_marginEnd="14dp"
-        android:layout_marginBottom="14dp"
         android:padding="8dp"
-        android:text="Enable Gyroscope "
+        android:text="Gyro Control "
         android:textColor="#54534d"
         android:textStyle="bold"
-        android:textSize="18sp"
+        android:textSize="20sp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
