Main menu UI adjust

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,10 @@
     <!-- 文字颜色 -->
     <color name="text_light">#776E65</color> <!-- for light-colored cells -->
     <color name="text_dark">#F9F6F2</color> <!-- for dark-colored cells -->
+
+    <color name="light_yellow">#FFFFE0</color> <!-- 浅黄色 -->
+    <color name="dark_green">#006400</color> <!-- 深绿色 -->
+    <color name="orange">#FFA500</color> <!-- 橙色 -->
+    <color name="gray">#808080</color>
+    <color name="blue">#0000FF</color>
 </resources>
