--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="2048"
         android:textSize="48sp"
-        android:textColor="@color/dark_green"
+        android:textColor="@color/dark_orange"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="100dp"
         android:rotation="-10" />
@@ -52,7 +52,7 @@
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:gravity="center"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="70dp">
 
         <Button
             android:id="@+id/button_new_game"
@@ -60,7 +60,7 @@
             android:layout_height="wrap_content"
             android:text="New Game"
             android:textColor="@color/blue"
-            android:textSize="28sp"
+            android:textSize="30sp"
             android:background="@drawable/button_background"
             android:layout_margin="16dp" />
 
@@ -69,7 +69,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="Resume"
-            android:textSize="28sp"
+            android:textSize="30sp"
             android:textColor="@color/blue"
             android:background="@drawable/button_background"
             android:layout_margin="16dp" />
@@ -79,7 +79,7 @@
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text="About"
-            android:textSize="28sp"
+            android:textSize="30sp"
             android:textColor="@color/blue"
             android:background="@drawable/button_background"
             android:layout_margin="16dp" />
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:text="Quit"
             android:textColor="@color/blue"
-            android:textSize="28sp"
+            android:textSize="30sp"
             android:background="@drawable/button_background"
             android:layout_margin="16dp" />
     </LinearLayout>
