--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
         android:src="@drawable/ic_user" />
 
     <!-- 2048 Tilt -->
+
     <TextView
         android:id="@+id/text_2048"
         android:layout_width="wrap_content"
@@ -43,6 +44,17 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:rotation="10" />
+
+
+    <TextView
+        android:id="@+id/welcomeText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome!"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <!-- 四个按钮 -->
     <LinearLayout
@@ -85,6 +97,16 @@
             android:layout_margin="16dp" />
 
         <Button
+            android:id="@+id/logoutButton"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:textColor="@color/blue"
+            android:textSize="30sp"
+            android:background="@drawable/button_background"
+            android:layout_margin="16dp" />
+
+        <Button
             android:id="@+id/button_quit"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
@@ -93,6 +115,8 @@
             android:textSize="30sp"
             android:background="@drawable/button_background"
             android:layout_margin="16dp" />
+
+
     </LinearLayout>
 
     <TextView
