--- a/app/src/main/res/layout/dialog_user.xml
+++ b/app/src/main/res/layout/dialog_user.xml
@@ -1,5 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="20dp"
@@ -12,9 +13,9 @@
         android:layout_height="24dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:src="@android:drawable/ic_close"
+        android:src="@drawable/ic_close"
         android:contentDescription="Close"
-        android:tint="#333333"
+        app:tint="#333333"
         android:layout_margin="10dp" />
 
     <!-- Title -->
@@ -34,12 +35,13 @@
         android:id="@+id/et_username"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="Enter Username"
+        android:hint="username (max 10 chars or nums)"
         android:inputType="textPersonName"
         android:background="@drawable/edit_text_background"
         android:padding="12dp"
         android:layout_below="@id/tv_title"
         android:layout_marginTop="30dp"
+        android:maxLength="10"
         android:layout_centerHorizontal="true" />
 
     <!-- Password Input -->
@@ -47,12 +49,12 @@
         android:id="@+id/et_password"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:hint="Enter Password"
-        android:inputType="textPassword"
+        android:hint="password (max 6 digits)"
         android:background="@drawable/edit_text_background"
         android:padding="12dp"
         android:layout_below="@id/et_username"
         android:layout_marginTop="20dp"
+        android:inputType="numberPassword"
         android:layout_centerHorizontal="true" />
 
     <!-- Buttons Layout -->
