--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,6 @@
         android:layout_marginTop="10dp"
         android:rotation="10" />
 
-    <!-- 四个按钮 -->
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,7 +61,7 @@
             android:textColor="@color/blue"
             android:textSize="30sp"
             android:background="@drawable/button_background"
-            android:layout_margin="16dp" />
+            android:layout_margin="8dp" />
 
         <Button
             android:id="@+id/button_resume"
@@ -72,7 +71,17 @@
             android:textSize="30sp"
             android:textColor="@color/blue"
             android:background="@drawable/button_background"
-            android:layout_margin="16dp" />
+            android:layout_margin="8dp" />
+
+        <Button
+            android:id="@+id/button_rank"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:text="Record"
+            android:textSize="30sp"
+            android:textColor="@color/blue"
+            android:background="@drawable/button_background"
+            android:layout_margin="8dp" />
 
         <Button
             android:id="@+id/button_about"
@@ -82,7 +91,7 @@
             android:textSize="30sp"
             android:textColor="@color/blue"
             android:background="@drawable/button_background"
-            android:layout_margin="16dp" />
+            android:layout_margin="8dp" />
 
         <Button
             android:id="@+id/button_quit"
@@ -92,7 +101,7 @@
             android:textColor="@color/blue"
             android:textSize="30sp"
             android:background="@drawable/button_background"
-            android:layout_margin="16dp" />
+            android:layout_margin="8dp" />
     </LinearLayout>
 
     <TextView
