Fix back btn in Record

--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -8,11 +9,24 @@
     android:padding="16dp">
 
     <!-- 顶部标题 -->
+
+    <ImageView
+        android:id="@+id/ic_arrow_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="12dp"
+        android:contentDescription="Back to Main"
+        android:src="@drawable/ic_arrow_back"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tvRecordTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Record"
+        android:text="Your Highest Score"
         android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="center"
